# clonecode-backend

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
app/: application.py  main.py
app/api/dependencies/: database.py
app/core/: config.py  events.py
app/core/settings/: app.py  development.py  test.py
app/db/: events.py
app/db/repositories/: base.py
app/init/: config.py  events.py
app/init/settings/: app.py  base.py  development.py  production.py  test.py
app/models/: tbl_projects.py
app/routes/projects/: api.py
src/app/: application.py
src/app/dependencies/: rdb_session.py
src/app/models/: tbl_projects.py
src/app/routes/projects/: api.py  domain_model.py
