[tool.poetry]
name = "clonecode-backend"
version = "0.1.0"
description = "Asana backend clonecode project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "clonecode_backend"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.0"
SQLAlchemy = "^1.4.41"
aiosql = "^6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
